logs/Slang/generated/keywords/5.6.2--keyword_input.sv.log
name: keyword_input
description: The 'input' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_input.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_input.sv:8:8: error: expected declarator
    bit input;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_input.sv:8:9: error: can't use port declaration in module with ANSI style port list
    bit input;
        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_input.sv:8:14: error: expected declarator
    bit input;
             ^
